<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv_task"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@color/elephant_bone"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:layout_margin="@dimen/rv_items_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/activity_vertical_margin"
        android:paddingHorizontal="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/tv_task_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/amv_task"
            tools:text="@string/task_title"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"
        />

        <TextView
            android:id="@+id/tv_task_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            app:layout_constraintTop_toBottomOf="@id/tv_task_title"
            app:layout_constraintStart_toStartOf="@id/tv_task_title"
            app:layout_constraintEnd_toEndOf="@id/tv_task_title"
            tools:text="@string/task_description"
            android:maxLines="5"
            android:ellipsize="end"
        />

        <androidx.appcompat.widget.ActionMenuView
            android:id="@+id/amv_task"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
