<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:placeholderText="@string/task_enter_title"
                style="@style/TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_task_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_marginHorizontal="0dp"
                    android:layout_marginVertical="0dp"
                    android:hint="@string/task_title"
                    style="@style/TextInputEditText"
                    android:textColorHint="@color/bluish_grey"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:placeholderText="@string/task_enter_description"
                style="@style/TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_task_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_description"
                    style="@style/TextInputEditText"
                />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/task_save"
        style="@style/Button.Positive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_save"
    />

    <Button
        android:id="@+id/task_delete"
        style="@style/Button.Negative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_delete"
    />

    <Button
        android:id="@+id/task_cancel"
        style="@style/Button.Neutral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_cancel"
    />

</LinearLayout>
