<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.task_list.TaskListFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabMaxWidth="200dp"
        android:scrollbars="horizontal"
        app:tabMode="scrollable"
    />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_task_list"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="LinearLayoutManager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/task_list_item"
        android:paddingHorizontal="@dimen/rv_horizontal_padding"
    />

</androidx.constraintlayout.widget.ConstraintLayout>